@@ -95,6 +95,10 @@ d + geom_point(alpha = 1/10)
 d + geom_point(alpha = 1/20)
 d + geom_point(alpha = 1/100)
 
+# Using shapes with a border
+p <- ggplot(mtcars, aes(wt, mpg))
+p + geom_point(shape=21, size=5, colour='black', fill='white', stroke=4)
+
 # You can create interesting shapes by layering multiple points of
 # different sizes
 p <- ggplot(mtcars, aes(mpg, wt))
